prototypes/p5a/tests/invalid/12_swapped_nominal_params.hll
// MUST BE REJECTED: Email and URL are different nominal types, cannot be swapped

import hll.validation as validate

type Email = String where validate.email()
type URL = String where validate.url()

function sendNotification(Email to, URL link) {
    printLn(to)
    printLn(link)
}

function main() {
    let Email email = Email("alice@example.com")
    let URL url = URL("https://example.com")
    sendNotification(url, email)  // ERROR: URL is not Email, Email is not URL
}
